fix css bug on small width and height devices
metadata and similar videos was cropped on some screen dimensions. now it is fixed!

--- a/static/watch/style.css
+++ b/static/watch/style.css
@@ -14,6 +14,7 @@
   #page {
     overflow: auto;
     height: calc(calc(100vh - calc(calc(100vw / 16) * 9)) - 50px) !important;
+    min-height: calc(calc(100vh - 60vh) - 50px) !important;
   }
   body {
     /* margin-top: calc(calc(calc(100vw / 16) * 9) + 55px) !important; */
